--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <body>
         <main id="main-div">
             <div class="navbar-div center-items">
-                <nav class="navbar padding-top-medium">
+                <nav class="navbar padding-top-small padding-bottom-small">
                     <div class="nav-top-row">
                         <a href="#main-div">
                             <span class="logo">
