Fix mobile menu and navbar
- Mobile menu now covers the entire page when opened

- Ability to scroll content behind mobile menu removed

- Mobile menu now closes automatically when nav links are clicked

- Nav links now jump to correct position

- Nav links now animate on opening mobile menu

- Navbar is now transparent

--- a/index.html
+++ b/index.html
@@ -45,28 +45,28 @@
                     </div>
                     <div class="nav-div-wrapper">
                         <div class="nav-div">
-                                <a class="nav-link margin-right-large" href="#contact-page" title="Kontakt oss via telefon">
+                                <a class="nav-link margin-right-large" href="#contact-page" title="Kontakt oss via telefon" onclick="toggleMobileMenuNavLink()">
                                     <svg class="nav-icon padding-top-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="telephone-nav-icon" role="img">
                                         <title id="telephone-nav-icon">Kontakt oss via telefon</title>
                                         <use href="#telephone-icon"></use>
                                     </svg>
                                     Kontakt
                                 </a>
-                            <a class="nav-link margin-right-large" href="#about-page" title="Informasjon om oss">
+                            <a class="nav-link margin-right-large" href="#about-page" title="Informasjon om oss" onclick="toggleMobileMenuNavLink()">
                                 <svg class="nav-icon padding-top-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="about-nav-icon" role="img">
                                     <title id="about-nav-icon">Informasjon om oss</title>
                                     <use href="#about-icon"></use>
                                 </svg>
                                 Om oss
                             </a>
-                            <a class="nav-link margin-right-large" href="#find-page" title="Informasjon om hvordan du finner oss">
+                            <a class="nav-link margin-right-large" href="#find-page" title="Informasjon om hvordan du finner oss" onclick="toggleMobileMenuNavLink()">
                                 <svg class="nav-icon padding-top-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="find-nav-icon" role="img">
                                     <title id="find-nav-icon">Informasjon om hvordan du finner oss</title>
                                     <use href="#find-icon"></use>
                                 </svg>
                                 Finn oss
                             </a>
-                            <a class="nav-link" href="#diseases-page" title="Informasjon om øyesykdommer">
+                            <a class="nav-link" href="#diseases-page" title="Informasjon om øyesykdommer" onclick="toggleMobileMenuNavLink()">
                                 <svg class="nav-icon padding-top-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="disease-nav-icon" role="img">
                                     <title id="disease-nav-icon">Informasjon om øyesykdommer</title>
                                     <use href="#disease-icon"></use>
@@ -77,7 +77,7 @@
                     </div>
                 </nav>
             </div>
-            <div id="landing-page-background-div" class="margin-top-very-large margin-bottom-massive">
+            <div id="landing-page-background-div" class="margin-top-very-large margin-bottom-very-large">
                 <div id="landing-page">
                     <div class="left-side">
                         <h1 class="section-heading title margin-bottom-medium">Haugesund Øyelegesenter</h1>
@@ -88,7 +88,7 @@
                     <img class="landing-graphic" src="assets/vector_graphics/landing_graphic_alt_seven.svg" alt="Landing page graphic">
                 </div>
             </div>
-            <div id="about-page" class="full-page-background about-background-color margin-bottom-massive">
+            <div id="about-page" class="full-page-background about-background-color margin-bottom-very-large padding-top-very-large">
                 <div class="full-page layout column-gap-very-large">
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Hvem er vi?</h1>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div id="find-page" class="full-page-background find-background-color margin-bottom-massive">
+            <div id="find-page" class="full-page-background find-background-color margin-bottom-very-large padding-top-very-large">
                 <div class="full-page layout column-gap-very-large">
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Hvor finner du oss?</h1>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div id="diseases-page" class="full-page-background diseases-background-color margin-bottom-massive">
+            <div id="diseases-page" class="full-page-background diseases-background-color margin-bottom-very-large padding-top-very-large">
                 <div class="full-page diseases-layout">
                     <h1 class="section-heading margin-bottom-medium">Øyesykdommer</h1>
                     <span class="heading-accent margin-bottom-medium"></span>
@@ -229,7 +229,7 @@
                     </div>
                 </div>
             </div>
-            <div id="contact-page" class="full-page-background contact-background-color margin-bottom-very-large">
+            <div id="contact-page" class="full-page-background contact-background-color margin-bottom-contact padding-top-very-large">
                 <div class="full-page layout column-gap-very-large">
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Kontakt oss</h1>
