Add alternative style for about us page
- Added an alternative style for about us page

- Adjusted font sizes for buttons

- Center aligned continue icon

--- a/index.html
+++ b/index.html
@@ -84,26 +84,31 @@
                 </div>
             </div>
             <div id="about-page" class="full-page-background about-background-color margin-bottom-very-large padding-top-very-large">
-                <div class="full-page layout column-gap-very-large">
-                    <div class="left-side">
+                <div class="full-page about-layout">
+                    <header class="left-side margin-bottom-large">
                         <h1 class="section-heading margin-bottom-medium">Hvem er vi?</h1>
                         <span class="heading-accent margin-bottom-medium"></span>
-                        <h2 class="section-subheading margin-bottom-large">La oss fortelle deg litt om oss.</h2>
-                        <div class="text-box">
-                            <p class="normal-text margin-top-none">
-                                The path of the righteous man is beset on all sides by the iniquities of the selfish
-                                and the tyranny of evil men.
-                                Blessed is he who, in the name of charity and good will,
-                                shepherds the weak through the valley of darkness,
-                                for he is truly his brother's keeper and the finder of lost children.
-                                And I will strike down upon thee with great vengeance and furious anger
-                                those who would attempt to poison and destroy My brothers.
-                                And you will know My name is the Lord when I lay My vengeance upon thee.
-                            </p>
+                        <h2 class="section-subheading margin-bottom-none">La oss fortelle deg litt om oss.</h2>
+                    </header>
+                    <div class="about-cards-wrapper">
+                        <div class="about-card">
+                            <img class="about-card-image about-card-image-friendly margin-top-none margin-bottom-medium" src="assets/images/friendly.png">
+                            <h3 class="about-card-header margin-top-none margin-bottom-small">Vennlighet</h3>
+                            <span class="heading-accent margin-bottom-small"></span>
+                            <p class="normal-text center-text margin-top-none margin-bottom-none">Vi i Haugesund Øyelegesenter er en vennlig gjeng. Når du besøker oss i klinikken vår, vil vi møte deg med et smil og du vil med en gang føle deg ivaretatt. Vi mener man kommer langt med litt vennlighet og høflighet.</p>
                         </div>
-                    </div>
-                    <div class="right-side">
-                        <img class="about-graphic" src="assets/vector_graphics/about_graphic_alt.svg" alt="About page graphic">
+                        <div class="about-card">
+                            <img class="about-card-image about-card-image-safety margin-top-none margin-bottom-medium" src="assets/images/safety.png">
+                            <h3 class="about-card-header margin-top-none margin-bottom-small">Trygghet</h3>
+                            <span class="heading-accent margin-bottom-small"></span>
+                            <p class="normal-text center-text margin-top-none margin-bottom-none">Vi er opptatt av at du skal føle deg trygg hos oss. Hvis du er redd for noe eller har noen spørsmål, er det bare å <a class="external-link background-bottom-border" href="#contact-page">ta kontakt med oss</a>. Enten via telefon eller i klinikken. Vi sørger for at du alltid er informert hele veien. </p>
+                        </div>
+                        <div class="about-card">
+                            <img class="about-card-image about-card-image-skill margin-top-none margin-bottom-medium" src="assets/images/skill.png">
+                            <h3 class="about-card-header margin-top-none margin-bottom-small">Kompetanse</h3>
+                            <span class="heading-accent margin-bottom-small"></span>
+                            <p class="normal-text center-text margin-top-none margin-bottom-none">Våre ansatte er opptatt av å levere et høyt nivå av kompetanse for deg som pasient. Vi har drevet klinikk i Haugesund siden 2013, og har i løpet av årene perfeksjonert behandlingsmetodene våre.</p>
+                        </div>
                     </div>
                 </div>
             </div>
