Add card style to about us page

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <img class="about-card-image about-card-image-friendly margin-top-none margin-bottom-medium" src="assets/images/friendly.png">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Vennlighet</h3>
                             <span class="heading-accent margin-bottom-small"></span>
-                            <p class="normal-text center-text margin-top-none margin-bottom-none">Vi i Haugesund Øyelegesenter er en vennlig gjeng. Når du besøker oss i klinikken vår, vil vi møte deg med et smil og du vil med en gang føle deg ivaretatt. Vi mener man kommer langt med litt vennlighet og høflighet.</p>
+                            <p class="normal-text center-text margin-top-none margin-bottom-none">Vi i Haugesund Øyelegesenter er en vennlig gjeng. Når du besøker oss i klinikken vår, vil vi møte deg med et smil og du vil med en gang føle deg ivaretatt. Vi mener man kommer langt med litt vennlighet.</p>
                         </div>
                         <div class="about-card">
                             <img class="about-card-image about-card-image-safety margin-top-none margin-bottom-medium" src="assets/images/safety.png">
