--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="nav-top-row">
                         <a href="#main-div">
                             <span class="logo">
-                                <img class="margin-right-small" src="assets/vector_graphics/logo_three.svg" alt="Haugesund Øyelegesenter logo">
+                                <img class="margin-right-small" src="assets/vector_graphics/logo_four.svg" alt="Haugesund Øyelegesenter logo">
                                 Haugesund<br>Øyelegesenter
                             </span>
                         </a>
@@ -40,13 +40,6 @@
                     </div>
                     <div class="nav-div-wrapper">
                         <div class="nav-div">
-                                <a class="nav-link margin-right-large" href="#contact-page" title="Kontakt oss via telefon" onclick="toggleMobileMenuNavLink()">
-                                    <svg class="nav-icon padding-top-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="telephone-nav-icon" role="img">
-                                        <title id="telephone-nav-icon">Kontakt oss via telefon</title>
-                                        <use href="#telephone-icon"></use>
-                                    </svg>
-                                    Kontakt
-                                </a>
                             <a class="nav-link margin-right-large" href="#about-page" title="Informasjon om oss" onclick="toggleMobileMenuNavLink()">
                                 <svg class="nav-icon padding-top-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="about-nav-icon" role="img">
                                     <title id="about-nav-icon">Informasjon om oss</title>
@@ -61,12 +54,19 @@
                                 </svg>
                                 Finn oss
                             </a>
-                            <a class="nav-link" href="#diseases-page" title="Informasjon om øyesykdommer" onclick="toggleMobileMenuNavLink()">
+                            <a class="nav-link margin-right-large" href="#diseases-page" title="Informasjon om øyesykdommer" onclick="toggleMobileMenuNavLink()">
                                 <svg class="nav-icon padding-top-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="disease-nav-icon" role="img">
                                     <title id="disease-nav-icon">Informasjon om øyesykdommer</title>
                                     <use href="#disease-icon"></use>
                                 </svg>
                                 Øyesykdommer
+                            </a>
+                            <a class="nav-link" href="#contact-page" title="Kontakt oss via telefon" onclick="toggleMobileMenuNavLink()">
+                                <svg class="nav-icon padding-top-mini" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="telephone-nav-icon" role="img">
+                                    <title id="telephone-nav-icon">Kontakt oss via telefon</title>
+                                    <use href="#telephone-icon"></use>
+                                </svg>
+                                Kontakt
                             </a>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                         <h2 class="section-subheading title-subheading margin-bottom-large">Den beste behandlingen for deg med øyesykdommer.</h2>
                         <a href="#contact-page"><button class="contact-button" aria-label="Kontakt Haugesund Øyelegesenter">Kontakt oss</button></a>
                     </div>
-                    <img class="landing-graphic" src="assets/vector_graphics/landing_graphic_alt_seven.svg" alt="Landing page graphic">
+                    <img class="landing-graphic" src="assets/vector_graphics/landing_graphic_alt_ten.svg" alt="Landing page graphic">
                 </div>
             </div>
             <div id="about-page" class="full-page-background about-background-color margin-bottom-about-page padding-top-very-large">
@@ -101,7 +101,7 @@
                             <img class="about-card-image about-card-image-safety margin-top-none margin-bottom-medium" src="assets/images/safety.png">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Trygghet</h3>
                             <span class="heading-accent margin-bottom-small"></span>
-                            <p class="normal-text center-text margin-top-none margin-bottom-none">Vi er opptatt av at du skal føle deg trygg hos oss. Hvis du er redd for noe eller har noen spørsmål, er det bare å <a class="external-link background-bottom-border" href="#contact-page">ta kontakt med oss</a>. Enten via telefon eller i klinikken. Vi sørger for at du alltid er informert hele veien. </p>
+                            <p class="normal-text center-text margin-top-none margin-bottom-none">Vi er opptatt av at du skal føle deg trygg hos oss. Hvis du er redd for noe eller har noen spørsmål, er det bare å <a class="external-link" href="#contact-page">ta kontakt med oss</a>. Enten via telefon eller i klinikken. Vi sørger for at du alltid er informert hele veien. </p>
                         </div>
                         <div class="about-card">
                             <img class="about-card-image about-card-image-skill margin-top-none margin-bottom-medium" src="assets/images/skill.png">
@@ -135,7 +135,9 @@
                         </div>
                     </div>
                     <div class="right-side">
-                        <img class="border-radius-medium img-card normal-image" src="assets/screenshots/gmaps.png" alt="Veibeskrivelse">
+                            <a class="img-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane">
+                                <img class="img-card normal-image" src="assets/screenshots/gmaps.png" alt="Veibeskrivelse">
+                            </a>
                     </div>
                 </div>
             </div>
@@ -217,14 +219,14 @@
                             </a>
                         </div>
                         <svg class="diseases-graphic-top-right" width="150" height="178" viewBox="0 0 150 178" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="25" cy="86" r="25" fill="#76BCF6"/>
-                            <circle cx="90" cy="121" r="10" fill="#3D7ED1"/>
-                            <circle cx="40" cy="163" r="15" fill="#232A3A"/>
-                            <circle cx="110" cy="40" r="40" fill="#A6D8A1"/>
+                            <circle cx="25" cy="86" r="25" fill="#9FAFF6"/>
+                            <circle cx="90" cy="121" r="10" fill="#4F74F0"/>
+                            <circle cx="40" cy="163" r="15" fill="#1F293F"/>
+                            <circle cx="110" cy="40" r="40" fill="#1CEB2A"/>
                         </svg>
                         <svg class="diseases-graphic-bottom-left" width="55" height="52" viewBox="0 0 55 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="20" cy="20" r="20" fill="#4AB33F"/>
-                            <circle cx="50" cy="47" r="5" fill="#2D4F9F"/>
+                            <circle cx="20" cy="20" r="20" fill="#00C413"/>
+                            <circle cx="50" cy="47" r="5" fill="#1C5AEB"/>
                         </svg>
                     </div>
                 </div>
@@ -234,24 +236,20 @@
                     <div class="left-side">
                         <h1 class="section-heading margin-bottom-medium">Kontakt oss</h1>
                         <span class="heading-accent margin-bottom-medium"></span>
-                        <a href=tel:+4752709405 title="Ring Haugesund Øyelegesenter">
-                            <span class="contact-subheading margin-bottom-large">
-                                <svg class="margin-right-small" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="#2D4F9F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="telephone-contact-link-icon" role="img">
-                                    <title id="telephone-contact-link-icon">Ring Haugesund Øyelegesenter</title>
-                                    <use href="#telephone-icon"></use>
-                                </svg>
-                                <h2 class="section-subheading inline">+47 52 70 94 05</h2>
-                            </span>
+                        <a class="contact-link margin-bottom-large" href=tel:+4752709405 title="Ring Haugesund Øyelegesenter">
+                            <h2 class="section-subheading contact-subheading">+47 52 70 94 05</h2>
+                            <svg class="contact-icon" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="#1C59EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="telephone-contact-link-icon" role="img">
+                                <title id="telephone-contact-link-icon">Ring Haugesund Øyelegesenter</title>
+                                <use href="#telephone-icon"></use>
+                            </svg>
                         </a>
-                        <div class="text-box">
-                            <p class="normal-text margin-top-none margin-bottom-none">
-                                Hvis du trenger å endre en time eller har noen andre spørsmål, er det bare å <a class="external-link" href=tel:+4752709405 title="Ring Haugesund Øyelegesenter">ringe oss</a> via nummeret oppgitt på denne siden. 
-                                Vi har ingen fast telefontid, men svarer vanligvis i løpet av dagen når som helst.
-                            </p>
-                        </div>
+                        <p class="normal-text margin-top-none margin-bottom-none">
+                            Hvis du trenger å endre en time eller har noen andre spørsmål, er det bare å <a class="external-link" href=tel:+4752709405 title="Ring Haugesund Øyelegesenter">ringe oss</a> via nummeret oppgitt på denne siden. 
+                            Vi har ingen fast telefontid, men svarer vanligvis i løpet av dagen når som helst.
+                        </p>
                     </div>
                     <div class="right-side">
-                        <img class="normal-image" src="assets/screenshots/contact.png" alt="Contact page graphic">
+                        <img class="normal-image" src="assets/screenshots/contact_alt.png" alt="Contact page graphic">
                     </div>
                 </div>
             </div>
