--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <h2 class="section-subheading title-subheading margin-bottom-large">Den beste behandlingen for deg med øyesykdommer.</h2>
                         <a href="#contact-page"><button class="contact-button" aria-label="Kontakt Haugesund Øyelegesenter">Kontakt oss</button></a>
                     </div>
-                    <img class="landing-graphic" src="assets/vector_graphics/landing_graphic_alt_ten.svg" alt="Landing page graphic">
+                    <img class="landing-graphic" src="assets/vector_graphics/landing_graphic_alt_nine.svg" alt="Landing page graphic">
                 </div>
             </div>
             <div id="about-page" class="full-page-background about-background-color margin-bottom-about-page padding-top-very-large">
@@ -92,18 +92,21 @@
                     </header>
                     <div class="about-cards-wrapper">
                         <div class="about-card">
+                            <span class="card-accent"></span>
                             <img class="about-card-image about-card-image-friendly margin-top-none margin-bottom-medium" src="assets/images/friendly.png">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Vennlighet</h3>
                             <span class="heading-accent margin-bottom-small"></span>
                             <p class="normal-text center-text margin-top-none margin-bottom-none">Vi i Haugesund Øyelegesenter er en vennlig gjeng. Når du besøker oss i klinikken vår, vil vi møte deg med et smil og du vil med en gang føle deg ivaretatt. Vi mener man kommer langt med litt vennlighet.</p>
                         </div>
                         <div class="about-card">
+                            <span class="card-accent"></span>
                             <img class="about-card-image about-card-image-safety margin-top-none margin-bottom-medium" src="assets/images/safety.png">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Trygghet</h3>
                             <span class="heading-accent margin-bottom-small"></span>
                             <p class="normal-text center-text margin-top-none margin-bottom-none">Vi er opptatt av at du skal føle deg trygg hos oss. Hvis du er redd for noe eller har noen spørsmål, er det bare å <a class="external-link" href="#contact-page">ta kontakt med oss</a>. Enten via telefon eller i klinikken. Vi sørger for at du alltid er informert hele veien. </p>
                         </div>
                         <div class="about-card">
+                            <span class="card-accent"></span>
                             <img class="about-card-image about-card-image-skill margin-top-none margin-bottom-medium" src="assets/images/skill.png">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Kompetanse</h3>
                             <span class="heading-accent margin-bottom-small"></span>
