Remove double focus from buttons
- Removed double focus from buttons that had this issue

- Added new style for :focus selector

- Fixed small bug in navigation.js where wrong element was selected

- Small changes to markup

--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
             <div class="navbar-div center-items">
                 <nav class="navbar padding-top-small padding-bottom-small">
                     <div class="nav-top-row">
-                        <a href="#main-div">
-                            <span class="logo">
-                                <img class="margin-right-small" src="assets/vector_graphics/logo_four.svg" alt="Haugesund Øyelegesenter logo">
-                                Haugesund<br>Øyelegesenter
-                            </span>
+                        <a class="logo" href="#main-div" title="Gå til starten">
+                            <img class="margin-right-small" src="assets/vector_graphics/logo_four.svg" alt="Haugesund Øyelegesenter logo">
+                            Haugesund<br>Øyelegesenter
                         </a>
                         <svg class="menu-icon" onclick="toggleMobileMenu()" width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M3 12H21" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -78,7 +76,7 @@
                         <h1 class="section-heading title margin-bottom-medium">Haugesund Øyelegesenter</h1>
                         <span class="heading-accent margin-bottom-medium"></span>
                         <h2 class="section-subheading title-subheading margin-bottom-large">Den beste behandlingen for deg med øyesykdommer.</h2>
-                        <a href="#contact-page"><button class="contact-button" aria-label="Kontakt Haugesund Øyelegesenter">Kontakt oss</button></a>
+                        <a class="contact-button" href="#contact-page" title="Kontakt Haugesund Øyelegesenter">Kontakt oss</a>
                     </div>
                     <img class="landing-graphic" src="assets/vector_graphics/landing_graphic_alt_nine.svg" alt="Landing page graphic">
                 </div>
@@ -158,14 +156,12 @@
                                 Man opplever å se uklart, som å se gjennom et skittent
                                 vindusglass. De fleste over 70 år har en begynnende grå stær.
                             </p>
-                            <a href="gra_star.html" title="Les mer om grå stær">
-                                <button class="disease-button">
-                                    Les mer
-                                    <svg class="button-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="gra-star-link-icon" role="img">
-                                        <title id="gra-star-link-icon">Les mer om grå stær</title>
-                                        <use href="#read-more-icon"></use>
-                                    </svg>
-                                </button>
+                            <a class="disease-button" href="gra_star.html" title="Les mer om grå stær">
+                                Les mer
+                                <svg class="button-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="gra-star-link-icon" role="img">
+                                    <title id="gra-star-link-icon">Les mer om grå stær</title>
+                                    <use href="#read-more-icon"></use>
+                                </svg>
                             </a>
                         </div>
                         <div class="disease-card">
@@ -176,13 +172,12 @@
                                 av årsaksforklaringer. Tørre øyne er vanlig med økende alder,
                                 og vanligere hos kvinner enn hos menn.
                             </p>
-                            <a href="torrhet.html" title="Les mer om tørrhet i øynene">
-                                <button class="disease-button">Les mer
-                                    <svg class="button-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="torrhet-link-icon" role="img">
-                                        <title id="torrhet-link-icon">Les mer om tørrhet i øynene</title>
-                                        <use href="#read-more-icon"></use>
-                                    </svg>
-                                </button>
+                            <a class="disease-button" href="torrhet.html" title="Les mer om tørrhet i øynene">
+                                Les mer
+                                <svg class="button-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="torrhet-link-icon" role="img">
+                                    <title id="torrhet-link-icon">Les mer om tørrhet i øynene</title>
+                                    <use href="#read-more-icon"></use>
+                                </svg>
                             </a>
                         </div>
                         <div class="disease-card">
@@ -193,14 +188,12 @@
                                 Dette påvirker pasienten i form av gradvis tap av synsfeltet,
                                 området hjernen oppfatter gjennom øynene.
                             </p>
-                            <a href="gronn-star.html" title="Les mer om grønn stær">
-                                <button class="disease-button">
-                                    Les mer
-                                    <svg class="button-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="gronn-star-link-icon" role="img">
-                                        <title id="gronn-star-link-icon">Les mer om grønn stær</title>
-                                        <use href="#read-more-icon"></use>
-                                    </svg>
-                                </button>
+                            <a class="disease-button" href="gronn-star.html" title="Les mer om grønn stær">
+                                Les mer
+                                <svg class="button-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="gronn-star-link-icon" role="img">
+                                    <title id="gronn-star-link-icon">Les mer om grønn stær</title>
+                                    <use href="#read-more-icon"></use>
+                                </svg>
                             </a>
                         </div>
                         <div class="disease-card">
@@ -211,14 +204,12 @@
                                 komplikasjoner i en rekke organer, også i øynene.
                                 En vanlig komplikasjon er diabetisk retinopati.
                             </p>
-                            <a href="diabetes.html" title="Les mer om øyeforandringer ved diabetes">
-                                <button class="disease-button">
-                                    Les mer
-                                    <svg class="button-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="diabetes-link-icon" role="img">
-                                        <title id="diabetes-link-icon">Les mer om øyeforandringer ved diabetes</title>
-                                        <use href="#read-more-icon"></use>
-                                    </svg>
-                                </button>
+                            <a class="disease-button" href="diabetes.html" title="Les mer om øyeforandringer ved diabetes">
+                                Les mer
+                                <svg class="button-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="diabetes-link-icon" role="img">
+                                    <title id="diabetes-link-icon">Les mer om øyeforandringer ved diabetes</title>
+                                    <use href="#read-more-icon"></use>
+                                </svg>
                             </a>
                         </div>
                         <svg class="diseases-graphic-top-right" width="150" height="178" viewBox="0 0 150 178" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -294,6 +285,8 @@
                     </div>
                 </footer>
             </div>
+
+            <!-- To top button -->
             <a class="to-top-button" href="#main-div" title="Gå til toppen av siden">
                 <svg class="top-button-icon" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-labelledby="top-button-icon" role="img">
                     <title id="top-button-icon">Gå til toppen av siden</title>
@@ -302,7 +295,7 @@
             </a>
 
             <!-- Continue icon -->
-            <a href="#about-page" title="Fortsett nedover">
+            <a class="continue-button" href="#about-page" title="Fortsett nedover">
                 <svg class="continue-icon" width="34" height="47" viewBox="0 0 34 47" fill="none" xmlns="http://www.w3.org/2000/svg" aria-labelledby="continue-icon-title" role="img">
                     <title id="continue-icon-title">Fortsett nedover</title>
                     <path class="continue-arrow" d="M3 3L16.6989 17L31 3" stroke-width="7"/>
