Add some more animations
- Added some more animations like fadeInUpLeft and fadeInUpRight

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <h2 class="section-subheading margin-bottom-none">La oss fortelle deg litt om oss.</h2>
                     </header>
                     <div class="about-cards-wrapper">
-                        <div class="about-card scroll-animated-up">
+                        <div class="about-card scroll-animated-right-up">
                             <span class="card-accent"></span>
                             <img class="about-card-image about-card-image-friendly margin-top-none margin-bottom-medium" src="assets/images/friendly.png" alt="Friendly doctor talking with a patient">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Vennlighet</h3>
@@ -103,7 +103,7 @@
                             <span class="heading-accent margin-bottom-small"></span>
                             <p class="normal-text center-text margin-top-none margin-bottom-none">Vi er opptatt av at du skal føle deg trygg hos oss. Hvis du er redd for noe eller har noen spørsmål, er det bare å <a class="external-link" href="#contact-page">ta kontakt med oss</a>. Enten via telefon eller i klinikken. Vi sørger for at du alltid er informert hele veien. </p>
                         </div>
-                        <div class="about-card scroll-animated-up">
+                        <div class="about-card scroll-animated-left-up">
                             <span class="card-accent"></span>
                             <img class="about-card-image about-card-image-skill margin-top-none margin-bottom-medium" src="assets/images/skill.png" alt="Two doctors analyzing the human body on a blackboard">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Kompetanse</h3>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="right-side">
-                            <a class="img-link scroll-animated-left" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane">
+                            <a class="img-link scroll-animated-left-up" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane">
                                 <img class="img-card normal-image" src="assets/screenshots/gmaps.png" alt="Veibeskrivelse">
                             </a>
                     </div>
@@ -180,7 +180,7 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="disease-card scroll-animated-up">
+                        <div class="disease-card scroll-animated-right-up">
                             <h3 class="disease-heading margin-bottom-small">Grønn stær - Glaukom</h3>
                             <p class="disease-text margin-top-none margin-bottom-medium">
                                 Grønn stær er en gruppe øyesykdommer som har til felles
