Add scroll animations from AOS library
- These are currently buggy on mobile

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io_hos/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io_hos/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io_hos/favicon-16x16.png">
+        <link href="aos.css" rel="stylesheet"> <!-- AOS -->
         <script src="navigation.js"></script>
     </head>
 
@@ -89,21 +90,21 @@
                         <h2 class="section-subheading margin-bottom-none">La oss fortelle deg litt om oss.</h2>
                     </header>
                     <div class="about-cards-wrapper">
-                        <div class="about-card">
+                        <div class="about-card" data-aos="fade-up-right" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true">
                             <span class="card-accent"></span>
                             <img class="about-card-image about-card-image-friendly margin-top-none margin-bottom-medium" src="assets/images/friendly.png" alt="Friendly doctor talking with a patient">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Vennlighet</h3>
                             <span class="heading-accent margin-bottom-small"></span>
                             <p class="normal-text center-text margin-top-none margin-bottom-none">Vi i Haugesund Øyelegesenter er en vennlig gjeng. Når du besøker oss i klinikken vår, vil vi møte deg med et smil og du vil med en gang føle deg ivaretatt. Vi mener man kommer langt med litt vennlighet.</p>
                         </div>
-                        <div class="about-card">
+                        <div class="about-card" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true">
                             <span class="card-accent"></span>
                             <img class="about-card-image about-card-image-safety margin-top-none margin-bottom-medium" src="assets/images/safety.png" alt="Doctor consulting with a patient and its parent">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Trygghet</h3>
                             <span class="heading-accent margin-bottom-small"></span>
                             <p class="normal-text center-text margin-top-none margin-bottom-none">Vi er opptatt av at du skal føle deg trygg hos oss. Hvis du er redd for noe eller har noen spørsmål, er det bare å <a class="external-link" href="#contact-page">ta kontakt med oss</a>. Enten via telefon eller i klinikken. Vi sørger for at du alltid er informert hele veien. </p>
                         </div>
-                        <div class="about-card">
+                        <div class="about-card" data-aos="fade-up-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true">
                             <span class="card-accent"></span>
                             <img class="about-card-image about-card-image-skill margin-top-none margin-bottom-medium" src="assets/images/skill.png" alt="Two doctors analyzing the human body on a blackboard">
                             <h3 class="about-card-header margin-top-none margin-bottom-small">Kompetanse</h3>
@@ -120,7 +121,7 @@
                         <span class="heading-accent margin-bottom-medium"></span>
                         <h2 class="section-subheading margin-bottom-large">All infoen du trenger for å finne frem.</h2>
                         <p class="normal-text find-text margin-top-none margin-bottom-medium">Vi befinner oss midt i sentrum bare få minutter unna Markedet og Rådhuset. Vi hører til i samme bygg som Specsavers, i overetasjen.</p>
-                        <div class="find-card">
+                        <div class="find-card" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="180">
                             <h3 class="find-card-section-heading">Addresse</h3>
                             <p class="find-card-section-info margin-bottom-large">
                                 <a class="external-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane">
@@ -136,7 +137,7 @@
                         </div>
                     </div>
                     <div class="right-side">
-                            <a class="img-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane">
+                            <a class="img-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane" data-aos="fade-up-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="400">
                                 <img class="img-card normal-image" src="assets/screenshots/gmaps.png" alt="Veibeskrivelse">
                             </a>
                     </div>
@@ -148,7 +149,7 @@
                     <span class="heading-accent margin-bottom-medium"></span>
                     <h2 class="section-subheading margin-bottom-large">Informasjonen du trenger om ulike sykdommer.</h2>
                     <div class="disease-div">
-                        <div class="disease-card">
+                        <div class="disease-card" data-aos="fade-down-right" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="200">
                             <h3 class="disease-heading margin-bottom-small">Grå stær - Katarakt</h3>
                             <p class="disease-text margin-top-none margin-bottom-medium">
                                 Grå stær (katarakt) er en naturlig aldringsprosess.
@@ -164,7 +165,7 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="disease-card">
+                        <div class="disease-card" data-aos="fade-down-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="200">
                             <h3 class="disease-heading margin-bottom-small">Tørre øyne</h3>
                             <p class="disease-text margin-top-none margin-bottom-medium">
                                 Mange pasienter har problemer med tørrhet i øynene.
@@ -180,7 +181,7 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="disease-card">
+                        <div class="disease-card" data-aos="fade-up-right" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="200">
                             <h3 class="disease-heading margin-bottom-small">Grønn stær - Glaukom</h3>
                             <p class="disease-text margin-top-none margin-bottom-medium">
                                 Grønn stær er en gruppe øyesykdommer som har til felles
@@ -196,7 +197,7 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="disease-card">
+                        <div class="disease-card" data-aos="fade-up-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="200">
                             <h3 class="disease-heading margin-bottom-small">Øyeforandringer ved diabetes</h3>
                             <p class="disease-text margin-top-none margin-bottom-medium">
                                 Dårlig blodsukkerregulering over tid kan blant annet føre til
@@ -350,5 +351,11 @@
         </main>
         <div id="top-of-site-pixel-anchor" class="anchor"></div>
         <div id="top-of-site-pixel-anchor-two" class="anchor"></div>
+
+        <script src="aos.js"></script> <!-- AOS -->
+        <script>
+            AOS.init();
+            AOS.refreshHard();
+        </script>
     </body>
 </html>
