--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <span class="heading-accent margin-bottom-medium"></span>
                         <h2 class="section-subheading margin-bottom-large">All infoen du trenger for å finne frem.</h2>
                         <p class="normal-text find-text margin-top-none margin-bottom-medium">Vi befinner oss midt i sentrum bare få minutter unna Markedet og Rådhuset. Vi hører til i samme bygg som Specsavers, i overetasjen.</p>
-                        <div class="find-card" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="180">
+                        <div class="find-card" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true">
                             <h3 class="find-card-section-heading">Addresse</h3>
                             <p class="find-card-section-info margin-bottom-large">
                                 <a class="external-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane">
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="right-side">
-                            <a class="img-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane" data-aos="fade-up-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="400">
+                            <a class="img-link" href="https://www.google.no/maps/place/Haraldsgata+78,+5528+Haugesund/@59.4098144,5.2709039,17z/data=!3m1!4b1!4m5!3m4!1s0x463b9fcd1b07eeeb:0x685e8523239860b3!8m2!3d59.4098144!4d5.2730926" target="_blank" rel="noopener" title="Vis Haugesund Øyelegesenter på Google Maps i ny fane" data-aos="fade-up-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true">
                                 <img class="img-card normal-image" src="assets/screenshots/gmaps.png" alt="Veibeskrivelse">
                             </a>
                     </div>
@@ -149,7 +149,7 @@
                     <span class="heading-accent margin-bottom-medium"></span>
                     <h2 class="section-subheading margin-bottom-large">Informasjonen du trenger om ulike sykdommer.</h2>
                     <div class="disease-div">
-                        <div class="disease-card" data-aos="fade-down-right" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="200">
+                        <div class="disease-card" data-aos="fade-down-right" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true">
                             <h3 class="disease-heading margin-bottom-small">Grå stær - Katarakt</h3>
                             <p class="disease-text margin-top-none margin-bottom-medium">
                                 Grå stær (katarakt) er en naturlig aldringsprosess.
@@ -165,7 +165,7 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="disease-card" data-aos="fade-down-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="200">
+                        <div class="disease-card" data-aos="fade-down-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true">
                             <h3 class="disease-heading margin-bottom-small">Tørre øyne</h3>
                             <p class="disease-text margin-top-none margin-bottom-medium">
                                 Mange pasienter har problemer med tørrhet i øynene.
@@ -181,7 +181,7 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="disease-card" data-aos="fade-up-right" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="200">
+                        <div class="disease-card" data-aos="fade-up-right" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true">
                             <h3 class="disease-heading margin-bottom-small">Grønn stær - Glaukom</h3>
                             <p class="disease-text margin-top-none margin-bottom-medium">
                                 Grønn stær er en gruppe øyesykdommer som har til felles
@@ -197,7 +197,7 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="disease-card" data-aos="fade-up-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true" data-aos-offset="200">
+                        <div class="disease-card" data-aos="fade-up-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" data-aos-once="true">
                             <h3 class="disease-heading margin-bottom-small">Øyeforandringer ved diabetes</h3>
                             <p class="disease-text margin-top-none margin-bottom-medium">
                                 Dårlig blodsukkerregulering over tid kan blant annet føre til
